# SaveInput

./: .gitignore  DiscordML.ipynb  DropDB.py  README.md  createFakeUsers.py  main.py
Deprecated/: main.py
KeyLogger/: README.md  main.py
KeyLogger/Notebooks/: DiscordML.ipynb  MessageRecreation.ipynb  ModelTraining.ipynb
KeyLogger/Scripts/: DropDB.py  transform.py
KeyLogger/c_src/: CMakeLists.txt  main.c
KeyLogger/data/: synthetic_typing_data.csv
